--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ name: Trigger Documentation Update
 on:
   release:
     types: [published]
-  workflow_dispatch:
 
 jobs:
   trigger-doc-update:
@@ -14,7 +13,7 @@ jobs:
 
       - name: Trigger documentation update
         run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -X POST -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/ifranda/VaporDocumentationWebsite/dispatches \
           -d '{"event_type":"update-docs"}'
