--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,17 +3,22 @@ name: Trigger Documentation Update
 on:
   release:
     types: [published]
+  push:
+    branches:
+      - Actions
 
 jobs:
   trigger-doc-update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout VAPOR repo
         uses: actions/checkout@v4
 
       - name: Trigger documentation update
         run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/ifranda/VaporDocumentationWebsite/dispatches \
           -d '{"event_type":"update-docs"}'
