--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
+          miniconda-version: "latest"
           activate-environment: base
           auto-activate-base: true
           python-version: 3.9
